--- a/client/app/views/home.html
+++ b/client/app/views/home.html
@@ -1,1 +1,31 @@
-<p>Home view</p>
+<body>
+<div class="container" id="searchBox">
+  <div class="row text-center"><button>Set Amount</button><button>Percentage</button></div>
+
+  <div class="text-center">
+    <div class="text-center inline">
+      <div class="input-group col-md-6 col-md-offset-3 col-xs-8 col-xs-offset-2">
+        <div class="input-group-addon">$</div>
+        <input type="text" class="form-control">
+        <div class="input-group-addon">/wk</div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row text-center">Graph goes here</div>
+
+  <div class="text-center">
+    <div class="text-center inline">
+      <label>Flying From:</label>
+      <input type="text" placeholder="city or airport">
+    </div>
+
+    <div class="text-center inline">
+      <label>Flying To:</label>
+      <input type="text" placeholder="city or airport">
+    </div>
+  </div>
+
+  <div class="row text-center"><button type="submit">Search</button></div>
+</div>
+</body>
