Started on home page

--- a/client/app/views/home.html
+++ b/client/app/views/home.html
@@ -1,4 +1,22 @@
-<body>
+<div class="row">
+  <div class="col-xs-1 col-md-2">
+  </div> <!-- col end -->
+  <div class="col-xs-10 col-md-8">
+    <img src=""
+  </div> <!-- col end -->
+  <div class="col-xs-1 col-md-2">
+  </div> <!-- col end -->
+</div><!-- row end -->
+
+
+
+
+
+
+
+
+
+
 <div class="container" id="searchBox">
   <div class="row text-center"><button>Set Amount</button><button>Percentage</button></div>
 
@@ -28,4 +46,3 @@
 
   <div class="row text-center"><button type="submit">Search</button></div>
 </div>
-</body>
