login/signup form styling

--- a/client/app/assets/css/style.css
+++ b/client/app/assets/css/style.css
@@ -26,10 +26,14 @@ input, label {
 	display: inline-block;
 }
 
-.signup {
-	background-color: rgba(255,255,255,.8);
+.formBackground {
+	background-color: rgba(0,0,0,.6);
 	padding: 30px;
 	border-radius: 5px;
+}
+
+.formBackground legend {
+    color: white;
 }
 
 .block {
