--- a/client/app/views/signup.html
+++ b/client/app/views/signup.html
@@ -1,4 +1,4 @@
-<section class="signup col-md-4 col-md-offset-4 col-xs-10 col-xs-offset-1">
+<section class="formBackground col-md-4 col-md-offset-4 col-xs-10 col-xs-offset-1">
   <form ng-submit="userSignup()">
     <legend>Signup</legend>
 
