--- a/client/app/views/home.html
+++ b/client/app/views/home.html
@@ -1,4 +1,4 @@
-<div class="container" id="searchBox">
+<div class="container" id="searchBox" ng-hide="loggedIn">
   <div class="row text-center"><button>Set Amount</button><button>Percentage</button></div>
 
   <div class="text-center">
@@ -27,3 +27,4 @@
 
   <div class="row text-center"><button type="submit">Search</button></div>
 </div>
+<section ng-include="'app/views/profile.html'" ng-show="loggedIn"></section>
