adding deal.html styles and graphics on it

--- a/client/app/views/deal.html
+++ b/client/app/views/deal.html
@@ -1,7 +1,7 @@
 <div class="container text-center" id="profile">
 	<div class="row lg_text"><span class="color2">SEA</span> &rarr; <span class="color3">LAX</span></div>
 	<p class="md_text">at</p>
-	<div class="row">sdfs</div>
+	<div class="row perweek">sdfs</div>
 	<div class="row">sdf</div>
 	<div class="row">sdf</div>
 	<div class="row spacer"><a href="#/profile" class="btn btn_default">Let's Go!</a></div>
