--- a/client/app/views/profile.html
+++ b/client/app/views/profile.html
@@ -1,4 +1,4 @@
-<div class="container text-center" id="profile">
+<div class="container-fluid text-center" id="profile">
 	<div class="row lg_text">Username</div>
 	<div class="row md_text">email@prioritize.com</div>
 	<div class="row">
@@ -18,7 +18,7 @@
 		</div>
 		<div>
 			<p class="subtitle spacer color4">How much did you save today?</p>
-			<input type="text" placeholder="Amount" class="form-control"><p><a href="#/profile" class="btn btn-sm btn_default">Add to savings</a></p>
+			<input type="text" placeholder="Amount" class="form-control"><p class="spacer"><a href="#/profile" class="btn btn-sm btn_default">Add to savings</a></p>
 		</div>
 	</div>
 	<div class="row spacer"><a href="#/profile" class="btn btn_default">Logout</a></div>
