--- a/client/app/views/home.html
+++ b/client/app/views/home.html
@@ -1,57 +1,3 @@
 
-<div class="row">
-  <div class="col-xs-1 col-md-2">
-  </div><!-- col end -->
-  <div class="col-xs-8 col-md-8">
-    <img src="app/assets/img/pt_logo.png" class="img-responsive logo pull-left">
-    <div class="text-center">
-      <h3 class="quote">Your travel buddy to help you save for your next adventure!</h3>
-    </div>
-  </div><!-- col end -->
-  <div class="col-xs-1 col-md-2">
-  </div><!-- col end -->
-</div><!-- row end -->
-<div class="row center-row">
-  <div class="col-xs-1 col-md-2">
-  </div><!-- col end -->
-  <div class="col-xs-10 col-md-8" ng-controller="HomeCtrl">
-    <div class="pill-tabs">
-      <uib-tabset type="pills">
-        <uib-tab class="tab-heading" heading="Set Amount">
-          <div class="user-input">
-            <form class="form-inline">
-              <div class="form-group">
-                <div class="input-group">
-                  <div class="input-group-addon">$</div>
-                  <input type="number" class="form-control text-right" id="weekly_income" placeholder="{{weekly}}" ng-model="weekly">
-                  <div class="input-group-addon">/wk</div>
-                </div>
-              </div>
-              <div class="savings_per_year">
-                <p>${{weekly * 52}}</p>
-                Savings per year
-              </div>
-              <div>
-                <h4>Flying From:</h4>
-                <input type="text" placeholder="city or airport" class="form-control">
-                <h4>Flying From:</h4>
-                <input type="text" placeholder="city or airport" class="form-control">
-              </div>
-              <button type="submit" class="btn btn-default">Search</button>
-            </form>
-        </div>
-        </uib-tab>
-        <uib-tab heading="Percentage">
-
-        </uib-tab>
-      </uib-tabset>
-    </div>
-  </div><!-- col end -->
-  <div class="col-xs-1 col-md-2">
-  </div><!-- col end -->
-</div><!-- row end -->
-<div class="row">
-
-</div><!-- row end -->
-</div>
+<section ng-include="'app/views/splash.html'" ng-show="!loggedIn"></section>
 <section ng-include="'app/views/profile.html'" ng-show="loggedIn"></section>
