--- a/client/app/views/home.html
+++ b/client/app/views/home.html
@@ -1,3 +1,3 @@
 
 <section ng-include="'app/views/splash.html'" ng-show="!loggedIn"></section>
-<section ng-include="'app/views/profile.html'" ng-show="loggedIn"></section>
+<section ng-include="'app/views/profile.html'" ng-show="loggedIn" ng-controller="UserCtrl"></section>
