--- a/client/app/assets/css/style.css
+++ b/client/app/assets/css/style.css
@@ -7,6 +7,15 @@
   -o-background-size: cover;
 }
 
+.user_body {
+  background-image: url('../img/bg_profile.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+}
+
 .logo {
   height: 100px;
   margin-left: 25px;
@@ -16,7 +25,7 @@
 
 .center-row {
   background-color: rgba(0, 0, 0, 0.7);
-  padding: 10px;
+  padding: 15px;
 }
 
 .quote {
@@ -30,12 +39,20 @@
 }
 
 .pill-tabs {
-  margin: 0 125px;
   display: inline-block;
+  width: 100%;
 }
 
 .savings_per_year {
   color: rgb(255, 255, 255);
+}
+
+#monthly_income {
+  width: 125px;
+}
+
+#income_percentage {
+  width: 115px;
 }
 
 .pagination {
