--- a/client/app/views/splash.html
+++ b/client/app/views/splash.html
@@ -1,19 +1,20 @@
+<div class="container-fluid">
 <div class="row">
-  <div class="col-xs-1 col-md-2">
+  <div class="col-xs-1 col-sm-1 col-md-2">
   </div><!-- col end -->
-  <div class="col-xs-8 col-md-8">
+  <div class="col-xs-10 col-sm-10 col-md-8">
     <img src="app/assets/img/pt_logo.png" class="img-responsive logo pull-left">
     <div class="text-center">
       <h3 class="quote">Your travel buddy to help you save for your next adventure!</h3>
     </div>
   </div><!-- col end -->
-  <div class="col-xs-1 col-md-2">
+  <div class="col-xs-1 col-sm-1 col-md-2">
   </div><!-- col end -->
 </div><!-- row end -->
 <div class="row center-row">
-  <div class="col-xs-1 col-md-2">
+  <div class="col-xs-2 col-sm-1 col-md-3">
   </div><!-- col end -->
-  <div class="col-xs-10 col-md-8" ng-controller="HomeCtrl">
+  <div class="col-xs-8 col-sm-10 col-md-6" ng-controller="HomeCtrl">
     <div class="pill-tabs">
       <uib-tabset type="pills">
         <uib-tab class="tab-heading" heading="Set Amount">
@@ -22,7 +23,7 @@
               <div class="form-group">
                 <div class="input-group">
                   <div class="input-group-addon">$</div>
-                  <input type="number" class="form-control text-right" id="weekly_income" placeholder="{{weekly}}" ng-model="weekly">
+                  <input type="number" class="form-control text-right" id="weekly_income" placeholder="{{weekly}}" ng-model="weekly" min="0">
                   <div class="input-group-addon">/wk</div>
                 </div>
               </div>
@@ -41,15 +42,43 @@
           </div>
         </uib-tab>
         <uib-tab heading="Percentage">
-
+          <div class="user-input">
+            <form class="form-inline">
+              <div class="form-group">
+                <div id="monthly_income" class="input-group">
+                  <div class="input-group-addon">$</div>
+                  <input id="monthly_income_amount" type="number" class="form-control text-right"  placeholder="Income" ng-model="income" min="0">
+                </div>
+                <div id="income_percentage" class="input-group">
+                  <input type="number" class="form-control text-right" placeholder="0" max="100" min="0" ng-model="percentage">
+                  <span class="input-group-addon">%</span>
+                </div>
+              </div>
+              <div class="savings_per_week">
+                <p>${{(percentage * 0.01) * (income / 2)}}/week</p>
+              </div>
+              <div class="savings_per_year">
+                <p>${{((percentage * 0.01) * (income /2)) * 52}}</p>
+                Savings per year
+              </div>
+              <div>
+                <h4>Flying From:</h4>
+                <input type="text" placeholder="city or airport" class="form-control">
+                <h4>Flying From:</h4>
+                <input type="text" placeholder="city or airport" class="form-control">
+              </div>
+              <button type="submit" class="btn btn-default">Search</button>
+            </form>
+          </div>
         </uib-tab>
       </uib-tabset>
     </div>
   </div><!-- col end -->
-  <div class="col-xs-1 col-md-2">
+  <div class="col-xs-2 col-sm-1 col-md-3">
   </div><!-- col end -->
 </div><!-- row end -->
 <div class="row">
 
 </div><!-- row end -->
+</div>
 </div>
