profile data is there

--- a/client/app/views/profile.html
+++ b/client/app/views/profile.html
@@ -1,7 +1,6 @@
 <div class="container text-center" id="profile">
-	<div class="row lg_text">Username</div>
-	<div class="row md_text">email@prioritize.com</div>
 	<div class="row">
+    <h3>Your Account</h3>
 		<div class="spacer text-left col-md-6 col-xs-6">
 			<p class="subtitle underline color1">Favorites</p>
 			<p>Berlin</p>
