--- a/client/app/assets/css/style.css
+++ b/client/app/assets/css/style.css
@@ -61,9 +61,22 @@ body {
 	color: #DEDEDE;
 }
 
+/*footer styles*/
+html {
+	position: relative;
+    min-height: 100%;
+}
 .footer {
-  position: relative;
-  font-size: 9px;
+  	position: absolute;
+  	font-size: 9px;
+  	bottom: 0px;
+  	width: 100%;
+ 	height: 20px;
+ 	/*margin-top: 20px;*/
+ 	padding-top: 40px;
+ 	/*margin-bottom: 20px;*/
+ 	text-align: center;
+	vertical-align: middle;
 }
 
 .formBackground {
@@ -137,9 +150,9 @@ li{
 
 /*profile*/
 #profile {
-	width: 480px;
+	/*width: 480px;*/
 	background-color: rgba(0, 0, 0, .7);
 	margin: 0 auto;
-	border-radius: 20px;
+	/*border-radius: 20px;*/
 	padding: 50px 50px;
 }
