some styling on homepage

--- a/client/app/assets/css/style.css
+++ b/client/app/assets/css/style.css
@@ -25,7 +25,7 @@
 
 .center-row {
   background-color: rgba(0, 0, 0, 0.7);
-  padding: 15px;
+  padding: 50px;
 }
 
 .quote {
@@ -39,7 +39,7 @@
 }
 
 .pill-tabs {
-  display: inline-block;
+  display: inline;
   width: 100%;
 }
 
@@ -47,12 +47,13 @@
   color: rgb(255, 255, 255);
 }
 
-#monthly_income {
-  width: 125px;
+#monthly_income_amount {
+  width: 100px;
+
 }
 
 #income_percentage {
-  width: 115px;
+  width: 100px;
 }
 
 .pagination {
@@ -113,7 +114,7 @@ li{
 }
 
 .spacer {
-	padding-top: 30px;
+	margin-top: 30px;
 }
 
 .btn_default {
@@ -171,31 +172,30 @@ li{
 }
 
 .imgContainer {
-	background-image: url("../img/cloud.png");
+	/*background-image: url("../img/cloud.png");*/
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: contain;
 	height: 80px;
 	margin: 30px 0;
 	padding-top: 30px;
+}
+
+.imgContainer1 {
+	background-image: url("../img/cloud.png");
+	
 }
 
 .imgContainer2 {
 	background-image: url("../img/banner.png");
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: contain;
-	height: 80px;
-	margin: 30px 0;
-	padding-top: 30px;
+	
 }
 
 .imgContainer3 {
 	background-image: url("../img/suitcase.png");
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: contain;
-	height: 80px;
-	margin: 30px 0;
-	padding-top: 30px;
+}
+
+.imgContainer4 {
+	background-image: url("../img/bar-gradient.png");
+	height: 50px;
 }
