--- a/client/app/views/deal.html
+++ b/client/app/views/deal.html
@@ -4,15 +4,15 @@
 			<div class="lg_text">
 				<span class="color2">SEA</span> &rarr; <span class="color3">LAX</span>
 				<p class="md_text">at</p>
-				<div class="imgContainer">
+				<div class="imgContainer imgContainer1">
 					$<span>{{savedPerWeek}}</span><span class="md_text">/wk</span>
 					<h4>you will need</h4>
 				</div>
-				<div class="imgContainer2">
+				<div class="imgContainer imgContainer2">
 					<span>{{ monthsNeeded(savedPerWeek, price) }}</span><span class="md_text">months</span>
 					<h4>to save</h4>
 				</div>
-				<div class="imgContainer3">
+				<div class="imgContainer imgContainer3">
 					$<span>{{price}}</span>
 				</div>
 				
