--- a/client/app/views/splash.html
+++ b/client/app/views/splash.html
@@ -19,11 +19,11 @@
       <uib-tabset type="pills">
         <uib-tab class="tab-heading" heading="Set Amount">
           <div class="user-input">
-            <form class="form-inline" novalidate>
+            <form class="form-inline" role="form">
               <div class="form-group">
                 <div class="input-group">
                   <div class="input-group-addon">$</div>
-                  <input type="number" class="form-control text-right" id="weekly_income" placeholder="{{weekly}}" ng-model="weekly" min="0">
+                  <input type="number" class="form-control text-right" id="weekly_income" placeholder="0" min="0" ng-model="weekly">
                   <div class="input-group-addon">/wk</div>
                 </div>
               </div>
@@ -33,13 +33,11 @@
               </div>
               <div>
                 <h4>Flying From:</h4>
-                <input type="text" placeholder="city or airport" class="form-control" ng-model="origin">
-                {{origin}}
+                <input type="text" placeholder="city or airport" class="form-control" ng-model="airport.origin">
                 <h4>Flying To:</h4>
-                <input type="text" placeholder="city or airport" class="form-control" ng-model="destination">
-                {{destination}}
+                <input type="text" placeholder="city or airport" class="form-control" ng-model="airport.destination">
               </div>
-              <button type="submit" class="btn btn-default" ng-click="search()">Search</button>
+              <button type="submit" class="btn btn-default" ng-click="search(weekly)">Search</button>
             </form>
           </div>
         </uib-tab>
