--- a/client/app/views/login.html
+++ b/client/app/views/login.html
@@ -4,7 +4,7 @@
 
     <div class="form-group">
       <label for="username">Username</label>
-      <input type="username" class="form-control" id="username" placeholder="Enter email" ng-model="user.username">
+      <input type="username" class="form-control" id="username" placeholder="Enter username" ng-model="user.username">
     </div>
     <div class="form-group">
       <label for="password">Password</label>
