--- a/client/app/views/deal.html
+++ b/client/app/views/deal.html
@@ -2,7 +2,7 @@
 	<div class="col-xs-2 col-md-3"></div>
 		<div class="text-center col-xs-8 col-md-6">
 			<div class="lg_text">
-				<span class="color2" ng-model="to">{{to}}</span> &rarr; <span class="color3" ng-model="from">{{from}}</span>
+				<span class="color2" ng-model="to">{{to | uppercase}}</span> &rarr; <span class="color3" ng-model="from">{{from | uppercase}}</span>
 				<p class="md_text">at</p>
 				<div class="imgContainer imgContainer1">
 					$<span>{{savedPerWeek}}</span><span class="md_text">/wk</span>
