--- a/client/app/views/splash.html
+++ b/client/app/views/splash.html
@@ -12,9 +12,9 @@
   </div><!-- col end -->
 </div><!-- row end -->
 <div class="row center-row">
-  <div class="col-sm-1 col-md-3">
+  <div class="col-xs-0 col-sm-1 col-md-3 col-lg-3">
   </div><!-- col end -->
-  <div class="col-xs-12 col-sm-10 col-md-6" ng-controller="HomeCtrl">
+  <div class="col-xs-12 col-sm-10 col-md-6 col-lg-6" ng-controller="HomeCtrl">
     <div class="pill-tabs">
       <uib-tabset type="pills">
         <uib-tab class="tab-heading" heading="Set Amount">
@@ -23,13 +23,13 @@
               <div class="form-group">
                 <div class="input-group">
                   <div class="input-group-addon">$</div>
-                  <input type="number" class="form-control text-right" id="weekly_income" placeholder="0" min="0" autofocus ng-model="weekly">
+                  <input type="number" class="form-control text-right" id="weekly_income" placeholder="0" min="1" autofocus autocomplete="off" ng-model="weekly">
                   <div class="input-group-addon">/wk</div>
                 </div>
               </div>
               <div class="row">
                 <div class="text-center imgContainer imgContainer4 col-md-5">
-                  $<span>{{weekly * 52}}</span>
+                  $<span>{{weekly * 52 | number : 2}}</span>
                 <p>Savings per year</p>
                 </div>
 
@@ -48,33 +48,30 @@
           <div class="user-input">
             <form class="form-inline" novalidate>
               <div class="form-group">
-
-                <div id="monthly_income" class="input-group">
+                <div id="monthly_income" class="input-group col-xs-6 col-md-6">
                   <div class="input-group-addon">$</div>
-                  <input id="monthly_income_amount" type="number" class="form-control text-right" placeholder="Income" min="0" ng-model="income">
+                  <input id="monthly_income_amount" type="number" class="form-control text-right" placeholder="Income" min="1" ng-model="income">
                 </div>
-                <br>
-                <div id="income_percentage" class="input-group spacer">
-                  <input type="number" class="form-control text-right" placeholder="0" max="100" min="0" ng-model="percentage">
-                  <span class="input-group-addon">%</span>
+                <div id="income_percentage" class="input-group col-xs-6 col-md-6">
+                  <input type="number" class="form-control text-right" placeholder="0" max="100" min="1" ng-model="percentage">
+                  <div class="input-group-addon">%</div>
                 </div>
-
               </div>
               <br><br>
-              <div class="savings_per_week">
-                ${{(percentage * 0.01) * (income / 2)}}/week
+              <div class="savings_per_week col-xs-8 col-xs-offset-2">
+                ${{(percentage * 0.01) * (income / 2) | number : 2}}/week
               </div>
               <div class="row">
                 <div class="text-center imgContainer imgContainer4 col-md-5">
-                  $<span>{{((percentage * 0.01) * (income /2)) * 52}}</span>
+                  $<span>{{((percentage * 0.01) * (income /2)) * 52 | number : 2}}</span>
                   <p>Savings per year</p>
                 </div>
               </div>
               <div>
                 <h4>Flying From:</h4>
-                <input type="text" placeholder="city or airport" class="form-control" ng-model="airport.origin">
+                <input type="text" placeholder="city or airport" class="city form-control col-md-12" ng-model="airport.origin">
                 <h4>Flying To:</h4>
-                <input type="text" placeholder="city or airport" class="form-control" ng-model="airport.destination">
+                <input type="text" placeholder="city or airport" class="city form-control col-md-12" ng-model="airport.destination">
               </div>
               <button type="submit" class="spacer btn btn_default" ng-click="search(airport, (percentage * 0.01) * (income / 2))">Search</button>
             </form>
@@ -83,7 +80,7 @@
       </uib-tabset>
     </div>
   </div><!-- col end -->
-  <div class="col-sm-1 col-md-3">
+  <div class="col-xs-0 col-sm-1 col-md-3 col-lg-3">
   </div><!-- col end -->
 </div><!-- row end -->
 <div class="row">
