--- a/client/app/views/deal.html
+++ b/client/app/views/deal.html
@@ -16,8 +16,8 @@
 					$<span>{{price}}</span>
 				</div>
 
-				<p class="md_text">See where else you can go with your savings</p>
-				<div class="row spacer"><a href="#/deal" class="btn btn_default">Let's Go!</a></div>
+				<p class="md_text">See the unreal deals</p>
+				<div class="row spacer"><button class="btn" ng-click="popularSearch(to, from)">Let's Go!</button></div>
 			</div>
 		</div>
 	<div class="col-xs-2 col-md-3"></div>
