--- a/client/app/views/deal.html
+++ b/client/app/views/deal.html
@@ -2,23 +2,26 @@
 	<div class="col-xs-2 col-md-3"></div>
 		<div class="text-center col-xs-8 col-md-6">
 			<div class="lg_text">
-				<span class="color2" ng-model="to">{{to | uppercase}}</span> &rarr; <span class="color3" ng-model="from">{{from | uppercase}}</span>
-				<p class="md_text">at</p>
+				<div class="headerBox">
+					<span class="color2" ng-model="to">{{to | uppercase}}</span> &rarr; <span class="color3" ng-model="from">{{from | uppercase}}</span>
+				</div>
+				<p class="md_text spacer">at</p>
 				<div class="imgContainer imgContainer1">
 					$<span>{{savedPerWeek}}</span><span class="md_text">/wk</span>
 					<h4>you will need</h4>
 				</div>
-				<div class="imgContainer2">
-					<span>{{ monthsNeeded() }}</span><span class="md_text">months</span>
-					<h4>to save</h4>
+				<div class="imgContainer imgContainer2">
+					<p>{{ monthsNeeded() }}<span class="md_text">months</span></p>
 				</div>
-				<div class="imgContainer imgContainer3">
+				<h4>to save</h4>
+				<div class="imgContainer imgContainer3 ">
 					$<span>{{price}}</span>
 				</div>
 
 				<p class="md_text">See where else you can go with your savings</p>
-				<div class="row spacer"><a href="#/deal" class="btn btn_default">Let's Go!</a></div>
+				<div class="row"><a href="#/deal" class="btn btn-lg btn_default">Let's Go!</a></div>
 			</div>
 		</div>
 	<div class="col-xs-2 col-md-3"></div>
 </div>
+
